# ai-quiz-project

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  build.sh  check_models.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_topic.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
qtrmrs/apps/ai_agent/: apps.py  client.py  prompts.py  services.py  urls.py  views.py
qtrmrs/apps/core/: urls.py  views.py
qtrmrs/apps/quizzes/: admin.py  apps.py  models.py  urls.py  views.py
qtrmrs/apps/quizzes/migrations/: 0001_initial.py  0002_question_code_snippet.py
qtrmrs/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
qtrmrs/apps/users/migrations/: 0001_initial.py
qtrmrs/config/: asgi.py  urls.py
qtrmrs/config/settings/: base.py  local.py  production.py
qtrmrs/static/css/: base.css  theme.css
qtrmrs/templates/: base.html
qtrmrs/templates/ai_agent/: chat.html
qtrmrs/templates/core/: home.html  languages.html
qtrmrs/templates/quizzes/: player.html  results.html  setup.html
qtrmrs/templates/quizzes/partials/: question_card.html  results_list.html
qtrmrs/templates/users/: dashboard.html  login.html  settings.html  signup.html
quiz_app/: settings.py  urls.py
static/css/: auth.css  base.css
templates/: base.html  dashboard.html  landing.html  login.html  quiz.html  quiz_chat.html  results.html  settings.html  setup.html  setup_topics.html  signup.html
